--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Demo by dlopezna</title>
+    <title>Codename <WhatsOn></WhatsOn></title>
   </head>
 
   <body>
@@ -18,15 +18,15 @@
       <div class="inner">
 
         <header>
-          <h1>Demo</h1>
-          <h2>demo ofertas mapa</h2>
+          <h1>WhatsOn</h1>
+          <h2>Demo envio mensajes</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
+        <!--<section id="downloads" class="clearfix">
           <a href="https://github.com/dlopezna/demo/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/dlopezna/demo/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/dlopezna/demo" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
+        </section>-->
 
         <hr>
 
