Añadido ApiKey para google map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <title>Codename WhatsOn</title>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=API_KEY&sensor=FALSE">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAt1sesVmuXfc0X-ZyhKiNbanLdBcb55QY&sensor=FALSE">
     </script>
     <script type="text/javascript">
       function initialize() {
