added title to maps

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         
         
         <div id="right_content">
+         <h3>Mapa</h3>
         <div id="map-canvas"/>
         </div>
+        <div style="clear:both"></div>
         </section>
 
         <footer>
