Changed http protocol

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <title>Codename WhatsOn</title>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOWEsE-z_NT13uzMOqbQv9ulvSF20zepk&sensor=false">
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBOWEsE-z_NT13uzMOqbQv9ulvSF20zepk&sensor=false">
     </script>
     <script type="text/javascript">
       function initialize() {
