--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         
         <div id="right_content">
          <h3>Mapa</h3>
-        <div id="map-canvas"/>
+        	<div id="map-canvas"/></div>
         </div>
         <div style="clear:both"></div>
         </section>
