--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -83,7 +82,7 @@
         
         <div id="right_content">
          <h3>Mapa</h3>
-        	<div id="map-canvas"/></div>
+        	<div id="map-canvas"></div>
         </div>
         <div style="clear:both"></div>
         </section>
