--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
     </style>
       <script type="text/javascript"
-      src="http://maps.google.com/maps/api/js?sensor=false">
+      src="http://maps.google.com/maps/api/js?sensor=true">
     </script>
     <script type="text/javascript">
     var initialLocation;
@@ -101,7 +101,7 @@
         <div id="left_content">
           <h3>Filtros</h3>
           <label for="amount">Edad:</label>
-  		<input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;">
+  		  <label id="amount" style="border:0; color:#f6931f; font-weight:bold;"/>
           <div id="slider-range"></div>
           Sexo: Ambos<br/>
           Radio: 2km<br/>
