--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         padding: 0px
       }
     </style>
-      <script type="text/javascript"
-      src="http://maps.google.com/maps/api/js?sensor=true">
-    </script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"> </script>
+    
     <script type="text/javascript">
     var initialLocation;
     var siberia = new google.maps.LatLng(60, 105);
