--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Codename WhatsOn</title>
+    <title>Code WhatsOn</title>
   
   </head>
 
