--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
       max: 100,
       values: [ 16, 50 ],
       slide: function( event, ui ) {
-        $( "#amount" ).val( "entre " + ui.values[ 0 ] + " - " + ui.values[ 1 ] );
+        $( "#amount" ).html( "entre " + ui.values[ 0 ] + " - " + ui.values[ 1 ] );
       }
     });
-    $( "#amount" ).val("entre " + $( "#slider-range" ).slider( "values", 0 ) +
+    $( "#amount" ).html("entre " + $( "#slider-range" ).slider( "values", 0 ) +
       " - " + $( "#slider-range" ).slider( "values", 1 ) );
   });
   </script>
@@ -120,7 +120,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <div id="left_content">
           <h3>Filtros</h3>
           <label for="amount">Edad:</label>
-  		  <label id="amount" style="border:0; color:#f6931f; font-weight:bold;"/>
+  		  <label id="amount" style="border:0; color:#f6931f; font-weight:bold;"></label>
           <div id="slider-range"></div>
           Sexo: Ambos<br/>
           Radio: 2km<br/>
