--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
     <style>
       #map-canvas {
-        height: 100%;
+        height: 400px;
         margin: 0px;
         padding: 0px
       }
@@ -26,10 +26,12 @@
 // is probably because you have denied permission for location sharing.
 
 var map;
+    var myCurrentLocation=new google.maps.LatLng(-5.9269874,37.3335567)
 
 function initialize() {
   var mapOptions = {
-    zoom: 15
+    zoom: 15,
+    center: myCurrentLocation
   };
   map = new google.maps.Map(document.getElementById('map-canvas'),
       mapOptions);
@@ -121,12 +123,21 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <header>
           <h1>WhatsOn</h1>
           <h2>Demo envio mensajes</h2>
+          
+          Mi ubicación: 
+          <select id="currentLocation">
+          <option value="">A</option>
+          <option value="">B</option>
+          <option value="">C</option>
+          <option value="">D</option>
+          </select>
         </header>
 
          <hr>
 
         <section id="main_content">
         <div id="left_content">
+        
           <h3>Filtros</h3>
           <label for="amount">Edad:</label>
   		  <label id="amount" style="border:0; color:#f6931f; font-weight:bold;"></label>
